@@ -1,64 +1,23 @@
 package main.java.memoranda.ui;
 
-import java.awt.AWTEvent;
-import java.awt.BorderLayout;
-import java.awt.Dimension;
-import java.awt.Frame;
-import java.awt.Point;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.awt.event.InputEvent;
-import java.awt.event.KeyEvent;
-import java.awt.event.WindowEvent;
-import java.io.File;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Vector;
-
-import javax.swing.AbstractAction;
-import javax.swing.Action;
-import javax.swing.ImageIcon;
-import javax.swing.JButton;
-import javax.swing.JEditorPane;
-import javax.swing.JFileChooser;
-import javax.swing.JFrame;
-import javax.swing.JLabel;
-import javax.swing.JMenu;
-import javax.swing.JMenuBar;
-import javax.swing.JMenuItem;
-import javax.swing.JPanel;
-import javax.swing.JSplitPane;
-import javax.swing.JToolBar;
-import javax.swing.KeyStroke;
-import javax.swing.UIManager;
-import javax.swing.text.html.HTMLDocument;
-
-import main.java.memoranda.CurrentProject;
-import main.java.memoranda.History;
-import main.java.memoranda.Note;
-import main.java.memoranda.NoteList;
-import main.java.memoranda.Project;
-import main.java.memoranda.ProjectListener;
-import main.java.memoranda.ResourcesList;
-import main.java.memoranda.TaskList;
-import main.java.memoranda.date.CurrentDate;
-import main.java.memoranda.ui.htmleditor.HTMLEditor;
-import main.java.memoranda.util.Configuration;
+import main.java.memoranda.*;
+import main.java.memoranda.date.*;
+import main.java.memoranda.ui.htmleditor.*;
 import main.java.memoranda.util.Context;
-import main.java.memoranda.util.CurrentStorage;
-import main.java.memoranda.util.Local;
-import main.java.memoranda.util.ProjectExporter;
-import main.java.memoranda.util.ProjectPackager;
 import main.java.memoranda.util.Util;
-import nu.xom.Builder;
-import nu.xom.Document;
-import nu.xom.Element;
-import nu.xom.Elements;
+import main.java.memoranda.util.*;
+import nu.xom.*;
+
+import javax.swing.*;
+import javax.swing.text.html.*;
+import java.awt.*;
+import java.awt.event.*;
+import java.io.*;
+import java.util.Map;
+import java.util.*;
 
 
 /**
- * 
  * Copyright (c) 2003 Memoranda Team. http://memoranda.sf.net
  */
 
@@ -114,39 +73,38 @@ public class AppFrame extends JFrame {
             showPreferences();
         }
     };
-    
+
     public Action exportNotesAction =
-                new AbstractAction(Local.getString("Export notes") + "...") {
-
-                public void actionPerformed(ActionEvent e) {
-                        ppExport_actionPerformed(e);
-                }
+        new AbstractAction(Local.getString("Export notes") + "...") {
+            public void actionPerformed(ActionEvent e) {
+                ppExport_actionPerformed(e);
+            }
         };
-        
-        public Action importNotesAction =
-                        new AbstractAction(Local.getString("Import multiple notes")) {
 
-                        public void actionPerformed(ActionEvent e) {
-                                ppImport_actionPerformed(e);
-                        }
-                };
-        public Action importOneNoteAction =
-                new AbstractAction(Local.getString("Import one note")) {
+    public Action importNotesAction =
+        new AbstractAction(Local.getString("Import multiple notes")) {
 
-                public void actionPerformed(ActionEvent e) {
-                        p1Import_actionPerformed(e);
-                }
+            public void actionPerformed(ActionEvent e) {
+                ppImport_actionPerformed(e);
+            }
         };
-    
+    public Action importOneNoteAction =
+        new AbstractAction(Local.getString("Import one note")) {
+
+            public void actionPerformed(ActionEvent e) {
+                p1Import_actionPerformed(e);
+            }
+        };
+
     JMenuItem jMenuFileNewPrj = new JMenuItem();
-        JMenuItem jMenuFileNewNote = new JMenuItem(workPanel.dailyItemsPanel.editorPanel.newAction);
+    JMenuItem jMenuFileNewNote = new JMenuItem(workPanel.dailyItemsPanel.editorPanel.newAction);
     JMenuItem jMenuFilePackPrj = new JMenuItem(prjPackAction);
     JMenuItem jMenuFileUnpackPrj = new JMenuItem(prjUnpackAction);
     JMenuItem jMenuFileExportPrj = new JMenuItem(exportNotesAction);
     JMenuItem jMenuFileImportPrj = new JMenuItem(importNotesAction);
     JMenuItem jMenuFileImportNote = new JMenuItem(importOneNoteAction);
     JMenuItem jMenuFileExportNote = new JMenuItem(
-            workPanel.dailyItemsPanel.editorPanel.exportAction);
+        workPanel.dailyItemsPanel.editorPanel.exportAction);
     JMenuItem jMenuFileMin = new JMenuItem(minimizeAction);
 
     JMenuItem jMenuItem1 = new JMenuItem();
@@ -170,48 +128,48 @@ public class AppFrame extends JFrame {
     JMenuItem jMenuInsertHR = new JMenuItem(editor.insertHRAction);
     JMenuItem jMenuInsertChar = new JMenuItem(editor.insCharAction);
     JMenuItem jMenuInsertDate = new JMenuItem(
-            workPanel.dailyItemsPanel.editorPanel.insertDateAction);
+        workPanel.dailyItemsPanel.editorPanel.insertDateAction);
     JMenuItem jMenuInsertTime = new JMenuItem(
-    		workPanel.dailyItemsPanel.editorPanel.insertTimeAction);
+        workPanel.dailyItemsPanel.editorPanel.insertTimeAction);
     JMenuItem jMenuInsertFile = new JMenuItem(
-            workPanel.dailyItemsPanel.editorPanel.importAction);
+        workPanel.dailyItemsPanel.editorPanel.importAction);
 
     JMenu jMenuFormatPStyle = new JMenu();
     JMenuItem jMenuFormatP = new JMenuItem(editor.new BlockAction(editor.T_P,
-            ""));
+        ""));
     JMenuItem jMenuFormatH1 = new JMenuItem(editor.new BlockAction(editor.T_H1,
-            ""));
+        ""));
     JMenuItem jMenuFormatH2 = new JMenuItem(editor.new BlockAction(editor.T_H2,
-            ""));
+        ""));
     JMenuItem jMenuFormatH3 = new JMenuItem(editor.new BlockAction(editor.T_H3,
-            ""));
+        ""));
     JMenuItem jMenuFormatH4 = new JMenuItem(editor.new BlockAction(editor.T_H4,
-            ""));
+        ""));
     JMenuItem jMenuFormatH5 = new JMenuItem(editor.new BlockAction(editor.T_H5,
-            ""));
+        ""));
     JMenuItem jMenuFormatH6 = new JMenuItem(editor.new BlockAction(editor.T_H6,
-            ""));
+        ""));
     JMenuItem jMenuFormatPRE = new JMenuItem(editor.new BlockAction(
-            editor.T_PRE, ""));
+        editor.T_PRE, ""));
     JMenuItem jMenuFormatBLCQ = new JMenuItem(editor.new BlockAction(
-            editor.T_BLOCKQ, ""));
+        editor.T_BLOCKQ, ""));
     JMenu jjMenuFormatChStyle = new JMenu();
     JMenuItem jMenuFormatChNorm = new JMenuItem(editor.new InlineAction(
-            editor.I_NORMAL, ""));
+        editor.I_NORMAL, ""));
     JMenuItem jMenuFormatChEM = new JMenuItem(editor.new InlineAction(
-            editor.I_EM, ""));
+        editor.I_EM, ""));
     JMenuItem jMenuFormatChSTRONG = new JMenuItem(editor.new InlineAction(
-            editor.I_STRONG, ""));
+        editor.I_STRONG, ""));
     JMenuItem jMenuFormatChCODE = new JMenuItem(editor.new InlineAction(
-            editor.I_CODE, ""));
+        editor.I_CODE, ""));
     JMenuItem jMenuFormatChCite = new JMenuItem(editor.new InlineAction(
-            editor.I_CITE, ""));
+        editor.I_CITE, ""));
     JMenuItem jMenuFormatChSUP = new JMenuItem(editor.new InlineAction(
-            editor.I_SUPERSCRIPT, ""));
+        editor.I_SUPERSCRIPT, ""));
     JMenuItem jMenuFormatChSUB = new JMenuItem(editor.new InlineAction(
-            editor.I_SUBSCRIPT, ""));
+        editor.I_SUBSCRIPT, ""));
     JMenuItem jMenuFormatChCustom = new JMenuItem(editor.new InlineAction(
-            editor.I_CUSTOM, ""));
+        editor.I_CUSTOM, ""));
     JMenuItem jMenuFormatChB = new JMenuItem(editor.boldAction);
     JMenuItem jMenuFormatChI = new JMenuItem(editor.italicAction);
     JMenuItem jMenuFormatChU = new JMenuItem(editor.underAction);
@@ -227,18 +185,18 @@ public class AppFrame extends JFrame {
     JMenuItem jMenuGoFwd = new JMenuItem(History.historyForwardAction);
 
     JMenuItem jMenuGoDayBack = new JMenuItem(
-            workPanel.dailyItemsPanel.calendar.dayBackAction);
+        workPanel.dailyItemsPanel.calendar.dayBackAction);
     JMenuItem jMenuGoDayFwd = new JMenuItem(
-            workPanel.dailyItemsPanel.calendar.dayForwardAction);
+        workPanel.dailyItemsPanel.calendar.dayForwardAction);
     JMenuItem jMenuGoToday = new JMenuItem(
-            workPanel.dailyItemsPanel.calendar.todayAction);
+        workPanel.dailyItemsPanel.calendar.todayAction);
 
     JMenuItem jMenuEditPref = new JMenuItem(preferencesAction);
 
     JMenu jMenuInsertSpecial = new JMenu();
-    
+
     JMenu jMenuHelp = new JMenu();
-    
+
     JMenuItem jMenuHelpGuide = new JMenuItem();
     JMenuItem jMenuHelpWeb = new JMenuItem();
     JMenuItem jMenuHelpBug = new JMenuItem();
@@ -249,23 +207,23 @@ public class AppFrame extends JFrame {
         enableEvents(AWTEvent.WINDOW_EVENT_MASK);
         try {
             jbInit();
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             new ExceptionDialog(e);
         }
     }
+
     //Component initialization
     private void jbInit() throws Exception {
         this.setIconImage(new ImageIcon(AppFrame.class.getResource(
-                "/ui/icons/jnotes16.png"))
-                .getImage());
+            "/ui/icons/jnotes16.png"))
+            .getImage());
         contentPane = (JPanel) this.getContentPane();
         contentPane.setLayout(borderLayout1);
         //this.setSize(new Dimension(800, 500));
         this.setTitle("Memoranda - " + CurrentProject.get().getTitle());
         //Added a space to App.VERSION_INFO to make it look some nicer
         statusBar.setText(" Version:" + App.VERSION_INFO + " (Build "
-                + App.BUILD_INFO + " )");
+            + App.BUILD_INFO + " )");
 
         jMenuFile.setText(Local.getString("File"));
         jMenuFileExit.setText(Local.getString("Exit"));
@@ -275,32 +233,32 @@ public class AppFrame extends JFrame {
             }
         });
         jMenuHelp.setText(Local.getString("Help"));
-        
+
         jMenuHelpGuide.setText(Local.getString("Online user's guide"));
         jMenuHelpGuide.setIcon(new ImageIcon(AppFrame.class.getResource(
-                "/ui/icons/help.png")));
+            "/ui/icons/help.png")));
         jMenuHelpGuide.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
                 jMenuHelpGuide_actionPerformed(e);
             }
         });
-        
+
         jMenuHelpWeb.setText(Local.getString("Memoranda web site"));
         jMenuHelpWeb.setIcon(new ImageIcon(AppFrame.class.getResource(
-                "/ui/icons/web.png")));
+            "/ui/icons/web.png")));
         jMenuHelpWeb.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
                 jMenuHelpWeb_actionPerformed(e);
             }
         });
-        
+
         jMenuHelpBug.setText(Local.getString("Report a bug"));
         jMenuHelpBug.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
                 jMenuHelpBug_actionPerformed(e);
             }
-        });        
-        
+        });
+
         jMenuHelpAbout.setText(Local.getString("About Memoranda"));
         jMenuHelpAbout.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
@@ -333,13 +291,13 @@ public class AppFrame extends JFrame {
 
         jMenuFileUnpackPrj.setText(Local.getString("Unpack project") + "...");
         jMenuFileExportNote.setText(Local.getString("Export current note")
-                + "...");
+            + "...");
         jMenuFileImportNote.setText(Local.getString("Import one note")
-                + "...");
+            + "...");
         jMenuFilePackPrj.setText(Local.getString("Pack project") + "...");
         jMenuFileMin.setText(Local.getString("Close the window"));
         jMenuFileMin.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_F10,
-                InputEvent.ALT_MASK));
+            InputEvent.ALT_MASK));
 
         jMenuEdit.setText(Local.getString("Edit"));
 
@@ -349,7 +307,7 @@ public class AppFrame extends JFrame {
         jMenuEditRedo.setToolTipText(Local.getString("Redo"));
         jMenuEditCut.setText(Local.getString("Cut"));
         jMenuEditCut.setToolTipText(Local.getString("Cut"));
-        jMenuEditCopy.setText((String) Local.getString("Copy"));
+        jMenuEditCopy.setText(Local.getString("Copy"));
         jMenuEditCopy.setToolTipText(Local.getString("Copy"));
         jMenuEditPaste.setText(Local.getString("Paste"));
         jMenuEditPaste.setToolTipText(Local.getString("Paste"));
@@ -383,7 +341,7 @@ public class AppFrame extends JFrame {
 
         jMenuInsertChar.setText(Local.getString("Special character") + "...");
         jMenuInsertChar.setToolTipText(Local.getString(
-                "Insert Special character"));
+            "Insert Special character"));
         jMenuInsertDate.setText(Local.getString("Current date"));
         jMenuInsertTime.setText(Local.getString("Current time"));
         jMenuInsertFile.setText(Local.getString("File") + "...");
@@ -425,9 +383,9 @@ public class AppFrame extends JFrame {
         jMenuFormatTableInsR.setText(Local.getString("Insert row"));
         jMenuFormatTableInsC.setText(Local.getString("Insert cell"));
         jMenuFormatProperties.setText(Local.getString("Object properties")
-                + "...");
+            + "...");
         jMenuFormatProperties.setToolTipText(Local.getString(
-                "Object properties"));
+            "Object properties"));
 
         jMenuGo.setText(Local.getString("Go"));
         jMenuGoHBack.setText(Local.getString("History back"));
@@ -446,7 +404,7 @@ public class AppFrame extends JFrame {
 
         toolBar.add(jButton3);
         jMenuFile.add(jMenuFileNewPrj);
-                jMenuFile.add(jMenuFileNewNote);
+        jMenuFile.add(jMenuFileNewNote);
         jMenuFile.addSeparator();
         jMenuFile.add(jMenuFilePackPrj);
         jMenuFile.add(jMenuFileUnpackPrj);
@@ -461,13 +419,13 @@ public class AppFrame extends JFrame {
         jMenuFile.add(jMenuFileMin);
         jMenuFile.addSeparator();
         jMenuFile.add(jMenuFileExit);
-        
+
         jMenuHelp.add(jMenuHelpGuide);
         jMenuHelp.add(jMenuHelpWeb);
         jMenuHelp.add(jMenuHelpBug);
         jMenuHelp.addSeparator();
         jMenuHelp.add(jMenuHelpAbout);
-        
+
         menuBar.add(jMenuFile);
         menuBar.add(jMenuEdit);
         menuBar.add(jMenuInsert);
@@ -564,8 +522,7 @@ public class AppFrame extends JFrame {
                 if (prPanelExpanded) {
                     prPanelExpanded = false;
                     splitPane.setDividerLocation(28);
-                }
-                else {
+                } else {
                     prPanelExpanded = true;
                     splitPane.setDividerLocation(0.2);
                 }
@@ -579,15 +536,12 @@ public class AppFrame extends JFrame {
         };
 
         this.workPanel.dailyItemsPanel.taskB
-                .addActionListener(setMenusDisabled);
+            .addActionListener(setMenusDisabled);
         this.workPanel.dailyItemsPanel.alarmB.addActionListener(
-                setMenusDisabled);
+            setMenusDisabled);
 
-        this.workPanel.tasksB.addActionListener(setMenusDisabled);
-        this.workPanel.routeB.addActionListener(setMenusDisabled);
-//        this.workPanel.filesB.addActionListener(setMenusDisabled);
-        this.workPanel.agendaB.addActionListener(setMenusDisabled);
-        this.workPanel.mapB.addActionListener(setMenusDisabled);
+        this.workPanel.routeButton.addActionListener(setMenusDisabled);
+        this.workPanel.mapButton.addActionListener(setMenusDisabled);
         this.workPanel.busAndDriverButton.addActionListener(setMenusDisabled);
 
 //        this.workPanel.notesB.addActionListener(
@@ -600,18 +554,17 @@ public class AppFrame extends JFrame {
         Object fwo = Context.get("FRAME_WIDTH");
         Object fho = Context.get("FRAME_HEIGHT");
         if ((fwo != null) && (fho != null)) {
-            int w = new Integer((String) fwo).intValue();
-            int h = new Integer((String) fho).intValue();
+            int w = Integer.parseInt((String) fwo);
+            int h = Integer.parseInt((String) fho);
             this.setSize(w, h);
-        }
-        else
+        } else
             this.setExtendedState(Frame.MAXIMIZED_BOTH);
 
         Object xo = Context.get("FRAME_XPOS");
         Object yo = Context.get("FRAME_YPOS");
         if ((xo != null) && (yo != null)) {
-            int x = new Integer((String) xo).intValue();
-            int y = new Integer((String) yo).intValue();
+            int x = Integer.parseInt((String) xo);
+            int y = Integer.parseInt((String) yo);
             this.setLocation(x, y);
         }
 
@@ -624,7 +577,7 @@ public class AppFrame extends JFrame {
         CurrentProject.addProjectListener(new ProjectListener() {
 
             public void projectChange(Project prj, NoteList nl, TaskList tl,
-                    ResourcesList rl) {
+                                      ResourcesList rl) {
             }
 
             public void projectWasChanged() {
@@ -633,35 +586,35 @@ public class AppFrame extends JFrame {
         });
 
     }
-   
+
     protected void jMenuHelpBug_actionPerformed(ActionEvent e) {
         Util.runBrowser(App.BUGS_TRACKER_URL);
     }
-   
+
     protected void jMenuHelpWeb_actionPerformed(ActionEvent e) {
         Util.runBrowser(App.WEBSITE_URL);
     }
-   
+
     protected void jMenuHelpGuide_actionPerformed(ActionEvent e) {
         Util.runBrowser(App.GUIDE_URL);
     }
-    
+
     //File | Exit action performed
     public void doExit() {
         if (Configuration.get("ASK_ON_EXIT").equals("yes")) {
-                        Dimension frmSize = this.getSize();
-                        Point loc = this.getLocation();
-                        
-                        ExitConfirmationDialog dlg = new ExitConfirmationDialog(this,Local.getString("Exit"));
-                        dlg.setLocation((frmSize.width - dlg.getSize().width) / 2 + loc.x, (frmSize.height - dlg.getSize().height) / 2 + loc.y);
-                        dlg.setVisible(true);
-                        if(dlg.CANCELLED) return;
+            Dimension frmSize = this.getSize();
+            Point loc = this.getLocation();
+
+            ExitConfirmationDialog dlg = new ExitConfirmationDialog(this, Local.getString("Exit"));
+            dlg.setLocation((frmSize.width - dlg.getSize().width) / 2 + loc.x, (frmSize.height - dlg.getSize().height) / 2 + loc.y);
+            dlg.setVisible(true);
+            if (dlg.CANCELLED) return;
         }
 
-        Context.put("FRAME_WIDTH", new Integer(this.getWidth()));
-        Context.put("FRAME_HEIGHT", new Integer(this.getHeight()));
-        Context.put("FRAME_XPOS", new Integer(this.getLocation().x));
-        Context.put("FRAME_YPOS", new Integer(this.getLocation().y));
+        Context.put("FRAME_WIDTH", Integer.valueOf(this.getWidth()));
+        Context.put("FRAME_HEIGHT", Integer.valueOf(this.getHeight()));
+        Context.put("FRAME_XPOS", Integer.valueOf(this.getLocation().x));
+        Context.put("FRAME_YPOS", Integer.valueOf(this.getLocation().y));
         exitNotify();
         System.exit(0);
     }
@@ -675,13 +628,13 @@ public class AppFrame extends JFrame {
 
     //Help | About action performed
     public void jMenuHelpAbout_actionPerformed(ActionEvent e) {
-         AppFrame_AboutBox dlg = new AppFrame_AboutBox(this);        
-         Dimension dlgSize = dlg.getSize();
-         Dimension frmSize = getSize();
-         Point loc = getLocation();
-         dlg.setLocation((frmSize.width - dlgSize.width) / 2 + loc.x, (frmSize.height - dlgSize.height) / 2 + loc.y);
-         dlg.setModal(true);
-         dlg.setVisible(true);
+        AppFrame_AboutBox dlg = new AppFrame_AboutBox(this);
+        Dimension dlgSize = dlg.getSize();
+        Dimension frmSize = getSize();
+        Point loc = getLocation();
+        dlg.setLocation((frmSize.width - dlgSize.width) / 2 + loc.x, (frmSize.height - dlgSize.height) / 2 + loc.y);
+        dlg.setModal(true);
+        dlg.setVisible(true);
     }
 
     protected void processWindowEvent(WindowEvent e) {
@@ -690,14 +643,12 @@ public class AppFrame extends JFrame {
 //                doExit();
 //            else
 //                doMinimize();
-        doExit();
-        }
-        else if ((e.getID() == WindowEvent.WINDOW_ICONIFIED)) {
+            doExit();
+        } else if ((e.getID() == WindowEvent.WINDOW_ICONIFIED)) {
 //            super.processWindowEvent(new WindowEvent(this,
 //                    WindowEvent.WINDOW_CLOSING));
             doMinimize();
-        }
-        else
+        } else
             super.processWindowEvent(e);
     }
 
@@ -725,26 +676,26 @@ public class AppFrame extends JFrame {
     public void doPrjPack() {
         // Fix until Sun's JVM supports more locales...
         UIManager.put("FileChooser.saveInLabelText", Local
-                .getString("Save in:"));
+            .getString("Save in:"));
         UIManager.put("FileChooser.upFolderToolTipText", Local.getString(
-                "Up One Level"));
+            "Up One Level"));
         UIManager.put("FileChooser.newFolderToolTipText", Local.getString(
-                "Create New Folder"));
+            "Create New Folder"));
         UIManager.put("FileChooser.listViewButtonToolTipText", Local
-                .getString("List"));
+            .getString("List"));
         UIManager.put("FileChooser.detailsViewButtonToolTipText", Local
-                .getString("Details"));
+            .getString("Details"));
         UIManager.put("FileChooser.fileNameLabelText", Local.getString(
-                "File Name:"));
+            "File Name:"));
         UIManager.put("FileChooser.filesOfTypeLabelText", Local.getString(
-                "Files of Type:"));
+            "Files of Type:"));
         UIManager.put("FileChooser.saveButtonText", Local.getString("Save"));
         UIManager.put("FileChooser.saveButtonToolTipText", Local.getString(
-                "Save selected file"));
+            "Save selected file"));
         UIManager
-                .put("FileChooser.cancelButtonText", Local.getString("Cancel"));
+            .put("FileChooser.cancelButtonText", Local.getString("Cancel"));
         UIManager.put("FileChooser.cancelButtonToolTipText", Local.getString(
-                "Cancel"));
+            "Cancel"));
 
         JFileChooser chooser = new JFileChooser();
         chooser.setFileHidingEnabled(false);
@@ -763,8 +714,7 @@ public class AppFrame extends JFrame {
 
         try {
             lastSel = (java.io.File) Context.get("LAST_SELECTED_PACK_FILE");
-        }
-        catch (ClassCastException cce) {
+        } catch (ClassCastException cce) {
             lastSel = new File(System.getProperty("user.dir") + File.separator);
         }
         //---------------------------------------------------------------------
@@ -773,7 +723,7 @@ public class AppFrame extends JFrame {
             chooser.setCurrentDirectory(lastSel);
         if (chooser.showSaveDialog(this) != JFileChooser.APPROVE_OPTION)
             return;
-        Context.put("LAST_SELECTED_PACK_FILE", chooser.getSelectedFile());        
+        Context.put("LAST_SELECTED_PACK_FILE", chooser.getSelectedFile());
         java.io.File f = chooser.getSelectedFile();
         ProjectPackager.pack(CurrentProject.get(), f);
     }
@@ -781,26 +731,26 @@ public class AppFrame extends JFrame {
     public void doPrjUnPack() {
         // Fix until Sun's JVM supports more locales...
         UIManager.put("FileChooser.lookInLabelText", Local
-                .getString("Look in:"));
+            .getString("Look in:"));
         UIManager.put("FileChooser.upFolderToolTipText", Local.getString(
-                "Up One Level"));
+            "Up One Level"));
         UIManager.put("FileChooser.newFolderToolTipText", Local.getString(
-                "Create New Folder"));
+            "Create New Folder"));
         UIManager.put("FileChooser.listViewButtonToolTipText", Local
-                .getString("List"));
+            .getString("List"));
         UIManager.put("FileChooser.detailsViewButtonToolTipText", Local
-                .getString("Details"));
+            .getString("Details"));
         UIManager.put("FileChooser.fileNameLabelText", Local.getString(
-                "File Name:"));
+            "File Name:"));
         UIManager.put("FileChooser.filesOfTypeLabelText", Local.getString(
-                "Files of Type:"));
+            "Files of Type:"));
         UIManager.put("FileChooser.openButtonText", Local.getString("Open"));
         UIManager.put("FileChooser.openButtonToolTipText", Local.getString(
-                "Open selected file"));
+            "Open selected file"));
         UIManager
-                .put("FileChooser.cancelButtonText", Local.getString("Cancel"));
+            .put("FileChooser.cancelButtonText", Local.getString("Cancel"));
         UIManager.put("FileChooser.cancelButtonToolTipText", Local.getString(
-                "Cancel"));
+            "Cancel"));
 
         JFileChooser chooser = new JFileChooser();
         chooser.setFileHidingEnabled(false);
@@ -819,8 +769,7 @@ public class AppFrame extends JFrame {
 
         try {
             lastSel = (java.io.File) Context.get("LAST_SELECTED_PACK_FILE");
-        }
-        catch (ClassCastException cce) {
+        } catch (ClassCastException cce) {
             lastSel = new File(System.getProperty("user.dir") + File.separator);
         }
         //---------------------------------------------------------------------
@@ -829,7 +778,7 @@ public class AppFrame extends JFrame {
             chooser.setCurrentDirectory(lastSel);
         if (chooser.showOpenDialog(this) != JFileChooser.APPROVE_OPTION)
             return;
-        Context.put("LAST_SELECTED_PACK_FILE", chooser.getSelectedFile());        
+        Context.put("LAST_SELECTED_PACK_FILE", chooser.getSelectedFile());
         java.io.File f = chooser.getSelectedFile();
         ProjectPackager.unpack(f);
         projectsPanel.prjTablePanel.updateUI();
@@ -841,272 +790,271 @@ public class AppFrame extends JFrame {
         dlg.setLocationRelativeTo(this);
         dlg.setVisible(true);
     }
-    
-            protected void ppExport_actionPerformed(ActionEvent e) {
-                // Fix until Sun's JVM supports more locales...
-                UIManager.put(
-                        "FileChooser.lookInLabelText",
-                        Local.getString("Save in:"));
-                UIManager.put(
-                        "FileChooser.upFolderToolTipText",
-                        Local.getString("Up One Level"));
-                UIManager.put(
-                        "FileChooser.newFolderToolTipText",
-                        Local.getString("Create New Folder"));
-                UIManager.put(
-                        "FileChooser.listViewButtonToolTipText",
-                        Local.getString("List"));
-                UIManager.put(
-                        "FileChooser.detailsViewButtonToolTipText",
-                        Local.getString("Details"));
-                UIManager.put(
-                        "FileChooser.fileNameLabelText",
-                        Local.getString("File Name:"));
-                UIManager.put(
-                        "FileChooser.filesOfTypeLabelText",
-                        Local.getString("Files of Type:"));
-                UIManager.put("FileChooser.saveButtonText", Local.getString("Save"));
-                UIManager.put(
-                        "FileChooser.saveButtonToolTipText",
-                        Local.getString("Save selected file"));
-                UIManager.put(
-                        "FileChooser.cancelButtonText",
-                        Local.getString("Cancel"));
-                UIManager.put(
-                        "FileChooser.cancelButtonToolTipText",
-                        Local.getString("Cancel"));
 
-                JFileChooser chooser = new JFileChooser();
-                chooser.setFileHidingEnabled(false);
-                chooser.setDialogTitle(Local.getString("Export notes"));
-                chooser.setAcceptAllFileFilterUsed(false);
-                chooser.setFileSelectionMode(JFileChooser.FILES_AND_DIRECTORIES);
-                chooser.addChoosableFileFilter(
-                        new AllFilesFilter(AllFilesFilter.XHTML));
-                chooser.addChoosableFileFilter(new AllFilesFilter(AllFilesFilter.HTML));
+    protected void ppExport_actionPerformed(ActionEvent e) {
+        // Fix until Sun's JVM supports more locales...
+        UIManager.put(
+            "FileChooser.lookInLabelText",
+            Local.getString("Save in:"));
+        UIManager.put(
+            "FileChooser.upFolderToolTipText",
+            Local.getString("Up One Level"));
+        UIManager.put(
+            "FileChooser.newFolderToolTipText",
+            Local.getString("Create New Folder"));
+        UIManager.put(
+            "FileChooser.listViewButtonToolTipText",
+            Local.getString("List"));
+        UIManager.put(
+            "FileChooser.detailsViewButtonToolTipText",
+            Local.getString("Details"));
+        UIManager.put(
+            "FileChooser.fileNameLabelText",
+            Local.getString("File Name:"));
+        UIManager.put(
+            "FileChooser.filesOfTypeLabelText",
+            Local.getString("Files of Type:"));
+        UIManager.put("FileChooser.saveButtonText", Local.getString("Save"));
+        UIManager.put(
+            "FileChooser.saveButtonToolTipText",
+            Local.getString("Save selected file"));
+        UIManager.put(
+            "FileChooser.cancelButtonText",
+            Local.getString("Cancel"));
+        UIManager.put(
+            "FileChooser.cancelButtonToolTipText",
+            Local.getString("Cancel"));
 
-                String lastSel = (String) Context.get("LAST_SELECTED_EXPORT_FILE");
-                if (lastSel != null)
-                        chooser.setCurrentDirectory(new File(lastSel));
+        JFileChooser chooser = new JFileChooser();
+        chooser.setFileHidingEnabled(false);
+        chooser.setDialogTitle(Local.getString("Export notes"));
+        chooser.setAcceptAllFileFilterUsed(false);
+        chooser.setFileSelectionMode(JFileChooser.FILES_AND_DIRECTORIES);
+        chooser.addChoosableFileFilter(
+            new AllFilesFilter(AllFilesFilter.XHTML));
+        chooser.addChoosableFileFilter(new AllFilesFilter(AllFilesFilter.HTML));
 
-                ProjectExportDialog dlg =
-                        new ProjectExportDialog(
-                                App.getFrame(),
-                                Local.getString("Export notes"),
-                                chooser);
-                String enc = (String) Context.get("EXPORT_FILE_ENCODING");
-                if (enc != null)
-                        dlg.encCB.setSelectedItem(enc);
-                String spl = (String) Context.get("EXPORT_SPLIT_NOTES");
-                if (spl != null)
-                        dlg.splitChB.setSelected(spl.equalsIgnoreCase("true"));
-                String ti = (String) Context.get("EXPORT_TITLES_AS_HEADERS");
-                if (ti != null)
-                        dlg.titlesAsHeadersChB.setSelected(ti.equalsIgnoreCase("true"));
-                Dimension dlgSize = new Dimension(550, 500);
-                dlg.setSize(dlgSize);
-                Dimension frmSize = App.getFrame().getSize();
-                Point loc = App.getFrame().getLocation();
-                dlg.setLocation(
-                        (frmSize.width - dlgSize.width) / 2 + loc.x,
-                        (frmSize.height - dlgSize.height) / 2 + loc.y);
-                dlg.setVisible(true);
-                if (dlg.CANCELLED)
-                        return;
-                
-                        Context.put(
-                                "LAST_SELECTED_EXPORT_FILE",
-                                chooser.getSelectedFile().getPath());
-                        Context.put("EXPORT_SPLIT_NOTES", new Boolean(dlg.splitChB.isSelected()).toString());
-                        Context.put("EXPORT_TITLES_AS_HEADERS", new Boolean(dlg.titlesAsHeadersChB.isSelected()).toString());
-                
-                int ei = dlg.encCB.getSelectedIndex();
-                enc = null;
-                if (ei == 1)
-                        enc = "UTF-8";
-                boolean nument = (ei == 2);
-                File f = chooser.getSelectedFile();
-                boolean xhtml =
-                        chooser.getFileFilter().getDescription().indexOf("XHTML") > -1;
-                 CurrentProject.save();
-                 ProjectExporter.export(CurrentProject.get(), chooser.getSelectedFile(), enc, xhtml, 
-                                 dlg.splitChB.isSelected(), true, nument, dlg.titlesAsHeadersChB.isSelected(), false); 
-                }
-            
-            protected void ppImport_actionPerformed(ActionEvent e) {
-            
-            UIManager.put("FileChooser.lookInLabelText", Local
-                    .getString("Look in:"));
-            UIManager.put("FileChooser.upFolderToolTipText", Local.getString(
-                    "Up One Level"));
-            UIManager.put("FileChooser.newFolderToolTipText", Local.getString(
-                    "Create New Folder"));
-            UIManager.put("FileChooser.listViewButtonToolTipText", Local
-                    .getString("List"));
-            UIManager.put("FileChooser.detailsViewButtonToolTipText", Local
-                    .getString("Details"));
-            UIManager.put("FileChooser.fileNameLabelText", Local.getString(
-                    "File Name:"));
-            UIManager.put("FileChooser.filesOfTypeLabelText", Local.getString(
-                    "Files of Type:"));
-            UIManager.put("FileChooser.openButtonText", Local.getString("Open"));
-            UIManager.put("FileChooser.openButtonToolTipText", Local.getString(
-                    "Open selected file"));
-            UIManager.put("FileChooser.cancelButtonText", Local.getString("Cancel"));
-            UIManager.put("FileChooser.cancelButtonToolTipText", Local.getString(
-                    "Cancel"));
+        String lastSel = (String) Context.get("LAST_SELECTED_EXPORT_FILE");
+        if (lastSel != null)
+            chooser.setCurrentDirectory(new File(lastSel));
 
-            JFileChooser chooser = new JFileChooser();
-            chooser.setFileHidingEnabled(false);
-            chooser.setDialogTitle(Local.getString("Import notes"));
-            chooser.setAcceptAllFileFilterUsed(false);
-            chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
-                chooser.addChoosableFileFilter(new AllFilesFilter(AllFilesFilter.HTML));
-            chooser.setPreferredSize(new Dimension(550, 375));
+        ProjectExportDialog dlg =
+            new ProjectExportDialog(
+                App.getFrame(),
+                Local.getString("Export notes"),
+                chooser);
+        String enc = (String) Context.get("EXPORT_FILE_ENCODING");
+        if (enc != null)
+            dlg.encCB.setSelectedItem(enc);
+        String spl = (String) Context.get("EXPORT_SPLIT_NOTES");
+        if (spl != null)
+            dlg.splitChB.setSelected(spl.equalsIgnoreCase("true"));
+        String ti = (String) Context.get("EXPORT_TITLES_AS_HEADERS");
+        if (ti != null)
+            dlg.titlesAsHeadersChB.setSelected(ti.equalsIgnoreCase("true"));
+        Dimension dlgSize = new Dimension(550, 500);
+        dlg.setSize(dlgSize);
+        Dimension frmSize = App.getFrame().getSize();
+        Point loc = App.getFrame().getLocation();
+        dlg.setLocation(
+            (frmSize.width - dlgSize.width) / 2 + loc.x,
+            (frmSize.height - dlgSize.height) / 2 + loc.y);
+        dlg.setVisible(true);
+        if (dlg.CANCELLED)
+            return;
 
-            File lastSel = null;
+        Context.put(
+            "LAST_SELECTED_EXPORT_FILE",
+            chooser.getSelectedFile().getPath());
+        Context.put("EXPORT_SPLIT_NOTES", Boolean.valueOf(dlg.splitChB.isSelected()).toString());
+        Context.put("EXPORT_TITLES_AS_HEADERS", Boolean.valueOf(dlg.titlesAsHeadersChB.isSelected()).toString());
 
-            try {
-                lastSel = (java.io.File) Context.get("LAST_SELECTED_NOTE_FILE");
-            }
-            catch (ClassCastException cce) {
-                lastSel = new File(System.getProperty("user.dir") + File.separator);
-            }
-            //---------------------------------------------------------------------
+        int ei = dlg.encCB.getSelectedIndex();
+        enc = null;
+        if (ei == 1)
+            enc = "UTF-8";
+        boolean nument = (ei == 2);
+        File f = chooser.getSelectedFile();
+        boolean xhtml =
+            chooser.getFileFilter().getDescription().indexOf("XHTML") > -1;
+        CurrentProject.save();
+        ProjectExporter.export(CurrentProject.get(), chooser.getSelectedFile(), enc, xhtml,
+            dlg.splitChB.isSelected(), true, nument, dlg.titlesAsHeadersChB.isSelected(), false);
+    }
 
-            if (lastSel != null)
-                chooser.setCurrentDirectory(lastSel);
-            if (chooser.showOpenDialog(this) != JFileChooser.APPROVE_OPTION)
-                return;
-            Context.put("LAST_SELECTED_NOTE_FILE", chooser.getSelectedFile());        
-            java.io.File f = chooser.getSelectedFile();
-            HashMap<String,String> notesName = new HashMap<String,String>();
-                HashMap<String,String> notesContent = new HashMap<String,String>();
-            Builder parser = new Builder();
-            String id="", name="", content = "";
-            try{
-                    Document document = parser.build(f);
-                    Element body = document.getRootElement().getFirstChildElement("body");
-                    Element names = body.getFirstChildElement("div").getFirstChildElement("ul");
-                    Elements namelist = names.getChildElements("li");
-                    Element item;
-                    
-                    for(int i = 0;i<namelist.size();i++){
-                            item = namelist.get(i);
-                            id = item.getFirstChildElement("a").getAttributeValue("href").replace("\"","").replace("#","");
-                            name = item.getValue();
-                            notesName.put(id,name);
-                    }
-                    System.out.println("id: "+id+" name: "+name);
-                    
-                    Elements contlist = body.getChildElements("a");
-                    for(int i = 0;i<(contlist.size()-1);i++){
-                            item = contlist.get(i);
-                            id = item.getAttributeValue("name").replace("\"","");
-                            content = item.getFirstChildElement("div").getValue();
-                            notesContent.put(id,content);
-                    }
+    protected void ppImport_actionPerformed(ActionEvent e) {
 
-                    JEditorPane p = new JEditorPane();
-                    p.setContentType("text/html");
-                    for (Map.Entry<String,String> entry : notesName.entrySet()){
-                            id = entry.getKey();
-                            name = entry.getValue().substring(11);
-                            content = notesContent.get(id);
-                            p.setText(content);
-                            HTMLDocument doc = (HTMLDocument)p.getDocument();
-                            Note note = CurrentProject.getNoteList().createNoteForDate(CurrentDate.get());
-                    note.setTitle(name);
-                            note.setId(Util.generateId());
-                    CurrentStorage.get().storeNote(note, doc);
-                    }
-                    workPanel.dailyItemsPanel.notesControlPane.refresh();
-                    
-            }catch(Exception exc){
-                    exc.printStackTrace();
-            }
+        UIManager.put("FileChooser.lookInLabelText", Local
+            .getString("Look in:"));
+        UIManager.put("FileChooser.upFolderToolTipText", Local.getString(
+            "Up One Level"));
+        UIManager.put("FileChooser.newFolderToolTipText", Local.getString(
+            "Create New Folder"));
+        UIManager.put("FileChooser.listViewButtonToolTipText", Local
+            .getString("List"));
+        UIManager.put("FileChooser.detailsViewButtonToolTipText", Local
+            .getString("Details"));
+        UIManager.put("FileChooser.fileNameLabelText", Local.getString(
+            "File Name:"));
+        UIManager.put("FileChooser.filesOfTypeLabelText", Local.getString(
+            "Files of Type:"));
+        UIManager.put("FileChooser.openButtonText", Local.getString("Open"));
+        UIManager.put("FileChooser.openButtonToolTipText", Local.getString(
+            "Open selected file"));
+        UIManager.put("FileChooser.cancelButtonText", Local.getString("Cancel"));
+        UIManager.put("FileChooser.cancelButtonToolTipText", Local.getString(
+            "Cancel"));
+
+        JFileChooser chooser = new JFileChooser();
+        chooser.setFileHidingEnabled(false);
+        chooser.setDialogTitle(Local.getString("Import notes"));
+        chooser.setAcceptAllFileFilterUsed(false);
+        chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+        chooser.addChoosableFileFilter(new AllFilesFilter(AllFilesFilter.HTML));
+        chooser.setPreferredSize(new Dimension(550, 375));
+
+        File lastSel = null;
+
+        try {
+            lastSel = (java.io.File) Context.get("LAST_SELECTED_NOTE_FILE");
+        } catch (ClassCastException cce) {
+            lastSel = new File(System.getProperty("user.dir") + File.separator);
         }
-            protected void p1Import_actionPerformed(ActionEvent e) {
-                
-            UIManager.put("FileChooser.lookInLabelText", Local
-                    .getString("Look in:"));
-            UIManager.put("FileChooser.upFolderToolTipText", Local.getString(
-                    "Up One Level"));
-            UIManager.put("FileChooser.newFolderToolTipText", Local.getString(
-                    "Create New Folder"));
-            UIManager.put("FileChooser.listViewButtonToolTipText", Local
-                    .getString("List"));
-            UIManager.put("FileChooser.detailsViewButtonToolTipText", Local
-                    .getString("Details"));
-            UIManager.put("FileChooser.fileNameLabelText", Local.getString(
-                    "File Name:"));
-            UIManager.put("FileChooser.filesOfTypeLabelText", Local.getString(
-                    "Files of Type:"));
-            UIManager.put("FileChooser.openButtonText", Local.getString("Open"));
-            UIManager.put("FileChooser.openButtonToolTipText", Local.getString(
-                    "Open selected file"));
-            UIManager.put("FileChooser.cancelButtonText", Local.getString("Cancel"));
-            UIManager.put("FileChooser.cancelButtonToolTipText", Local.getString(
-                    "Cancel"));
+        //---------------------------------------------------------------------
 
-            JFileChooser chooser = new JFileChooser();
-            chooser.setFileHidingEnabled(false);
+        if (lastSel != null)
+            chooser.setCurrentDirectory(lastSel);
+        if (chooser.showOpenDialog(this) != JFileChooser.APPROVE_OPTION)
+            return;
+        Context.put("LAST_SELECTED_NOTE_FILE", chooser.getSelectedFile());
+        java.io.File f = chooser.getSelectedFile();
+        HashMap<String, String> notesName = new HashMap<String, String>();
+        HashMap<String, String> notesContent = new HashMap<String, String>();
+        Builder parser = new Builder();
+        String id = "", name = "", content = "";
+        try {
+            Document document = parser.build(f);
+            Element body = document.getRootElement().getFirstChildElement("body");
+            Element names = body.getFirstChildElement("div").getFirstChildElement("ul");
+            Elements namelist = names.getChildElements("li");
+            Element item;
 
-            chooser.setDialogTitle(Local.getString("Import notes"));
-            chooser.setAcceptAllFileFilterUsed(false);
-            chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
-                chooser.addChoosableFileFilter(new AllFilesFilter(AllFilesFilter.HTML));
-            chooser.setPreferredSize(new Dimension(550, 375));
-
-            File lastSel = null;
-
-            try {
-                lastSel = (java.io.File) Context.get("LAST_SELECTED_NOTE_FILE");
+            for (int i = 0; i < namelist.size(); i++) {
+                item = namelist.get(i);
+                id = item.getFirstChildElement("a").getAttributeValue("href").replace("\"", "").replace("#", "");
+                name = item.getValue();
+                notesName.put(id, name);
             }
-            catch (ClassCastException cce) {
-                lastSel = new File(System.getProperty("user.dir") + File.separator);
-            }
-            //---------------------------------------------------------------------
+            System.out.println("id: " + id + " name: " + name);
 
-            if (lastSel != null)
-                chooser.setCurrentDirectory(lastSel);
-            if (chooser.showOpenDialog(this) != JFileChooser.APPROVE_OPTION)
-                return;
-            Context.put("LAST_SELECTED_NOTE_FILE", chooser.getSelectedFile());        
-            java.io.File f = chooser.getSelectedFile();
-            HashMap<String,String> notesName = new HashMap<String,String>();
-            HashMap<String,String> notesContent = new HashMap<String,String>();
-            Builder parser = new Builder();
-            String id="", name="", content = "";
-            try{
-                    Document document = parser.build(f);
-                    content = document.getRootElement().getFirstChildElement("body").getValue();
-                    content = content.substring(content.indexOf("\n", content.indexOf("-")));
-                    content = content.replace("<p>","").replace("</p>","\n");
-                    name = f.getName().substring(0,f.getName().lastIndexOf("."));	
-                    Element item;
-                    id=Util.generateId();
-                    System.out.println(id+" "+name+" "+content);
-                    notesName.put(id, name);
-                    notesContent.put(id, content);
-                    JEditorPane p = new JEditorPane();
-                    p.setContentType("text/html");
-                    
-                    for (Map.Entry<String,String> entry : notesName.entrySet()){
-                            id = entry.getKey();
-                            System.out.println(id+" "+name+" "+content);
-                            p.setText(content);
-                            HTMLDocument doc = (HTMLDocument)p.getDocument();
-                            Note note = CurrentProject.getNoteList().createNoteForDate(CurrentDate.get());
-                    note.setTitle(name);
-                            note.setId(Util.generateId());
-                    CurrentStorage.get().storeNote(note, doc);
-                    }
-                    workPanel.dailyItemsPanel.notesControlPane.refresh();
-                    
-            }catch(Exception exc){
-                    exc.printStackTrace();
+            Elements contlist = body.getChildElements("a");
+            for (int i = 0; i < (contlist.size() - 1); i++) {
+                item = contlist.get(i);
+                id = item.getAttributeValue("name").replace("\"", "");
+                content = item.getFirstChildElement("div").getValue();
+                notesContent.put(id, content);
             }
+
+            JEditorPane p = new JEditorPane();
+            p.setContentType("text/html");
+            for (Map.Entry<String, String> entry : notesName.entrySet()) {
+                id = entry.getKey();
+                name = entry.getValue().substring(11);
+                content = notesContent.get(id);
+                p.setText(content);
+                HTMLDocument doc = (HTMLDocument) p.getDocument();
+                Note note = CurrentProject.getNoteList().createNoteForDate(CurrentDate.get());
+                note.setTitle(name);
+                note.setId(Util.generateId());
+                CurrentStorage.get().storeNote(note, doc);
+            }
+            workPanel.dailyItemsPanel.notesControlPane.refresh();
+
+        } catch (Exception exc) {
+            exc.printStackTrace();
         }
+    }
+
+    protected void p1Import_actionPerformed(ActionEvent e) {
+
+        UIManager.put("FileChooser.lookInLabelText", Local
+            .getString("Look in:"));
+        UIManager.put("FileChooser.upFolderToolTipText", Local.getString(
+            "Up One Level"));
+        UIManager.put("FileChooser.newFolderToolTipText", Local.getString(
+            "Create New Folder"));
+        UIManager.put("FileChooser.listViewButtonToolTipText", Local
+            .getString("List"));
+        UIManager.put("FileChooser.detailsViewButtonToolTipText", Local
+            .getString("Details"));
+        UIManager.put("FileChooser.fileNameLabelText", Local.getString(
+            "File Name:"));
+        UIManager.put("FileChooser.filesOfTypeLabelText", Local.getString(
+            "Files of Type:"));
+        UIManager.put("FileChooser.openButtonText", Local.getString("Open"));
+        UIManager.put("FileChooser.openButtonToolTipText", Local.getString(
+            "Open selected file"));
+        UIManager.put("FileChooser.cancelButtonText", Local.getString("Cancel"));
+        UIManager.put("FileChooser.cancelButtonToolTipText", Local.getString(
+            "Cancel"));
+
+        JFileChooser chooser = new JFileChooser();
+        chooser.setFileHidingEnabled(false);
+
+        chooser.setDialogTitle(Local.getString("Import notes"));
+        chooser.setAcceptAllFileFilterUsed(false);
+        chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+        chooser.addChoosableFileFilter(new AllFilesFilter(AllFilesFilter.HTML));
+        chooser.setPreferredSize(new Dimension(550, 375));
+
+        File lastSel = null;
+
+        try {
+            lastSel = (java.io.File) Context.get("LAST_SELECTED_NOTE_FILE");
+        } catch (ClassCastException cce) {
+            lastSel = new File(System.getProperty("user.dir") + File.separator);
+        }
+        //---------------------------------------------------------------------
+
+        if (lastSel != null)
+            chooser.setCurrentDirectory(lastSel);
+        if (chooser.showOpenDialog(this) != JFileChooser.APPROVE_OPTION)
+            return;
+        Context.put("LAST_SELECTED_NOTE_FILE", chooser.getSelectedFile());
+        java.io.File f = chooser.getSelectedFile();
+        HashMap<String, String> notesName = new HashMap<String, String>();
+        HashMap<String, String> notesContent = new HashMap<String, String>();
+        Builder parser = new Builder();
+        String id = "", name = "", content = "";
+        try {
+            Document document = parser.build(f);
+            content = document.getRootElement().getFirstChildElement("body").getValue();
+            content = content.substring(content.indexOf("\n", content.indexOf("-")));
+            content = content.replace("<p>", "").replace("</p>", "\n");
+            name = f.getName().substring(0, f.getName().lastIndexOf("."));
+            Element item;
+            id = Util.generateId();
+            System.out.println(id + " " + name + " " + content);
+            notesName.put(id, name);
+            notesContent.put(id, content);
+            JEditorPane p = new JEditorPane();
+            p.setContentType("text/html");
+
+            for (Map.Entry<String, String> entry : notesName.entrySet()) {
+                id = entry.getKey();
+                System.out.println(id + " " + name + " " + content);
+                p.setText(content);
+                HTMLDocument doc = (HTMLDocument) p.getDocument();
+                Note note = CurrentProject.getNoteList().createNoteForDate(CurrentDate.get());
+                note.setTitle(name);
+                note.setId(Util.generateId());
+                CurrentStorage.get().storeNote(note, doc);
+            }
+            workPanel.dailyItemsPanel.notesControlPane.refresh();
+
+        } catch (Exception exc) {
+            exc.printStackTrace();
+        }
+    }
 
 }
