@@ -7,24 +7,14 @@
  * Copyright (c) 2003 Memoranda team: http://memoranda.sf.net
  */
 package main.java.memoranda.util;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.io.File;
-import java.io.IOException;
-import java.util.Calendar;
-import java.util.HashSet;
-import java.util.Set;
-import java.util.Iterator;
 
-import javax.swing.JFileChooser;
+import main.java.memoranda.date.*;
+import main.java.memoranda.ui.*;
 
-import main.java.memoranda.Node;
-import main.java.memoranda.date.CalendarDate;
-import main.java.memoranda.ui.App;
-import main.java.memoranda.ui.AppFrame;
-import main.java.memoranda.ui.ExceptionDialog;
-
-import java.util.Random;
+import javax.swing.*;
+import java.awt.event.*;
+import java.io.*;
+import java.util.*;
 
 /**
  *
@@ -32,19 +22,19 @@ import java.util.Random;
 /*$Id: Util.java,v 1.13 2007/03/20 08:22:41 alexeya Exp $*/
 public class Util {
 
-	static long seed = 0;
-	
+    static long seed = 0;
+
     public static String generateId() {
         long seed1 = System.currentTimeMillis();
-        while (seed1 == seed) 
-        	seed1 = System.currentTimeMillis(); // Make sure we'll don't get the same seed twice		  
-    	seed = seed1;        	
-    	Random r = new Random(seed); 
-    	return Integer.toString(r.nextInt(), 16) +
-				"-"+Integer.toString(r.nextInt(65535), 16) +
-				"-"+Integer.toString(r.nextInt(65535), 16) +
-				"-"+Integer.toString(r.nextInt(65535), 16);
-                    
+        while (seed1 == seed)
+            seed1 = System.currentTimeMillis(); // Make sure we'll don't get the same seed twice
+        seed = seed1;
+        Random r = new Random(seed);
+        return Integer.toString(r.nextInt(), 16) +
+            "-" + Integer.toString(r.nextInt(65535), 16) +
+            "-" + Integer.toString(r.nextInt(65535), 16) +
+            "-" + Integer.toString(r.nextInt(65535), 16);
+
     }
 
     public static String getDateStamp(Calendar cal) {
@@ -52,7 +42,7 @@ public class Util {
             + "/"
             + (cal.get(Calendar.MONTH))
             + "/"
-            + new Integer(cal.get(Calendar.YEAR)).toString();
+            + Integer.valueOf(cal.get(java.util.Calendar.YEAR));
 
     }
 
@@ -65,9 +55,9 @@ public class Util {
         int i1 = s.indexOf("/");
         int i2 = s.indexOf("/", i1 + 1);
         int[] date = new int[3];
-        date[0] = new Integer(s.substring(0, i1)).intValue();
-        date[1] = new Integer(s.substring(i1 + 1, i2)).intValue();
-        date[2] = new Integer(s.substring(i2 + 1)).intValue();
+        date[0] = Integer.parseInt(s.substring(0, i1));
+        date[1] = Integer.parseInt(s.substring(i1 + 1, i2));
+        date[2] = Integer.parseInt(s.substring(i2 + 1));
         return date;
         /*DateFormat dateFormat = DateFormat.getDateInstance(DateFormat.SHORT, currentLocale);
         Date d = null;
@@ -82,35 +72,34 @@ public class Util {
     }
 
     public static String getEnvDir() {
-    	// Changed static building of getEnvDir
-    	// Now system-related path-separator is used
-		String p = System.getProperty("user.home") + File.separator 
-			+ ".jnotes2" + File.separator;
+        // Changed static building of getEnvDir
+        // Now system-related path-separator is used
+        String p = System.getProperty("user.home") + File.separator
+            + ".jnotes2" + File.separator;
         if (new File(p).isDirectory()) return p;
-        return System.getProperty("user.home") + File.separator 
-        	+ ".memoranda" + File.separator;
+        return System.getProperty("user.home") + File.separator
+            + ".memoranda" + File.separator;
     }
 
     public static String getCDATA(String s) {
-      return "<![CDATA["+s+"]]>";
+        return "<![CDATA[" + s + "]]>";
     }
-    
+
     public static void runBrowser(String url) {
         if (!checkBrowser())
             return;
-        String commandLine = MimeTypesList.getAppList().getBrowserExec()+" "+url;
+        String commandLine = MimeTypesList.getAppList().getBrowserExec() + " " + url;
         System.out.println("Run: " + commandLine);
         try {
             /*DEBUG*/
             Runtime.getRuntime().exec(commandLine);
-        }
-        catch (Exception ex) {
+        } catch (Exception ex) {
             new ExceptionDialog(ex, "Failed to run an external web-browser application with commandline<br><code>"
-                    +commandLine+"</code>", "Check the application path and command line parameters " +
-                    		"(File-&gt;Preferences-&gt;Resource types).");
+                + commandLine + "</code>", "Check the application path and command line parameters " +
+                "(File-&gt;Preferences-&gt;Resource types).");
         }
     }
-    
+
     public static boolean checkBrowser() {
         AppList appList = MimeTypesList.getAppList();
         String bpath = appList.getBrowserExec();
@@ -131,42 +120,42 @@ public class Util {
         CurrentStorage.get().storeMimeTypesList();
         return true;
     }
-    
-    public static String getHoursFromMillis(long ms) {
-    	double numSeconds = (((double) ms) / 1000d);
-    	return String.valueOf(numSeconds / 3600);
-    }
-    
-    public static long getMillisFromHours(String hours) {
-    	try {
-        	double numHours = Double.parseDouble(hours);
-        	double millisDouble = (numHours * 3600 * 1000);
-        	return (long) millisDouble;
-    	}
-    	catch (NumberFormatException e) {
-    		return 0;
-    	}
-    }
-    
-    static Set tempFiles = new HashSet();
-    
-    static {
-    	AppFrame.addExitListener(new ActionListener() {
 
-			public void actionPerformed(ActionEvent arg0) {
-				for (Iterator i = tempFiles.iterator(); i.hasNext();) 
-					((File)i.next()).delete();				}
-			});
+    public static String getHoursFromMillis(long ms) {
+        double numSeconds = (((double) ms) / 1000d);
+        return String.valueOf(numSeconds / 3600);
     }
-    
+
+    public static long getMillisFromHours(String hours) {
+        try {
+            double numHours = Double.parseDouble(hours);
+            double millisDouble = (numHours * 3600 * 1000);
+            return (long) millisDouble;
+        } catch (NumberFormatException e) {
+            return 0;
+        }
+    }
+
+    static Set tempFiles = new HashSet();
+
+    static {
+        AppFrame.addExitListener(new ActionListener() {
+
+            public void actionPerformed(ActionEvent arg0) {
+                for (Iterator i = tempFiles.iterator(); i.hasNext(); )
+                    ((File) i.next()).delete();
+            }
+        });
+    }
+
     public static File getTempFile() throws IOException {
-    	File f = File.createTempFile("tmp", ".html", null);
-    	tempFiles.add(f);
-    	return f;
+        File f = File.createTempFile("tmp", ".html", null);
+        tempFiles.add(f);
+        return f;
     }
-    
+
     public static void debug(String str) {
-    	System.out.println("[DEBUG] " + str);
+        System.out.println("[DEBUG] " + str);
     }
 
     /**
@@ -175,7 +164,7 @@ public class Util {
     public static void error(Exception e) {
         System.out.println("[ERROR] Exception: " + e.getClass().getName());
         System.out.println("[ERROR] Exception Message: " + e.getMessage());
-        
+
         String stackTrace = "";
         StackTraceElement[] ste = e.getStackTrace();
         for (int i = 0; i < ste.length; i++) {
